# cpp-travis-tdd-template

./: CMakeLists.txt  README.org
ci/: script.sh
test/: CMakeLists.txt
